--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!--xmlns:th="http://www.thymeleaf.org"
+    이걸 넣으면 이 문서는 타임리프 템플릿이라고 알려준다.
+    그런데 회색처리 되어있다. 2버전에서는 필수 였는데 3에서부터는 생략해도 된다.
+    공식문서에는 아직 있어서 작성해둠.
+    -->
 <head>
     <meta charset="UTF-8">
     <title>게시판 페이지</title>
@@ -8,56 +13,59 @@
 <!-- 이 파일이 있어야 Ex08_2 번 테스트의 articlesAll() 테스트를 돌려볼 수 있다.
      이 파일의 코드가 바뀔 때 마다 리컴파일 해주는 걸 추천(ctrl + shift + f9), 혹시 안되면 저장하고 리컴파일 재시도
 -->
-    <header>헤더</header>
-    <hr/>
 
-    <main>
-        <form action="#">
-            <select id="search-type">
-                <option value="">제목</option>
-                <option value="">본문</option>
-                <option value="">id</option>
-                <option value="">닉네임</option>
-                <option value="">해시태그</option>
-            </select>
+<!--헤더를 컴포넌트로 변경-->
+<!--th:replacce="~{파일명 :: 셀렉터}" -->
+<header th:replace="~{header::#header}"></header>
 
-            <input type="search" placeholder="검색어를 입력하세요" name="search-value" id="search-value">
+<main>
+    <form action="#">
+        <select id="search-type">
+            <option value="">제목</option>
+            <option value="">본문</option>
+            <option value="">id</option>
+            <option value="">닉네임</option>
+            <option value="">해시태그</option>
+        </select>
 
-            <button type="submit">검색</button>
-        </form>
+        <input type="search" placeholder="검색어를 입력하세요" name="search-value" id="search-value">
 
-        <table>
-            <thead>
-                <tr>
-                    <th>제목</th>
-                    <th>해시태그</th>
-                    <th>작성자</th>
-                    <th>작성일</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1번글</td>
-                    <td>1번글</td>
-                    <td>1번글</td>
-                    <td>1번글</td>
-                </tr>
-            </tbody>
-        </table>
+        <button type="submit">검색</button>
+    </form>
+
+    <table>
+        <thead>
+            <tr>
+                <th>제목</th>
+                <th>해시태그</th>
+                <th>작성자</th>
+                <th>작성일</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1번글</td>
+                <td>1번글</td>
+                <td>1번글</td>
+                <td>1번글</td>
+            </tr>
+        </tbody>
+    </table>
 
 <!-- 페이지네이션-->
-        <nav>
-            <table>
-                <tbody>
+    <nav>
+        <table>
+            <tbody>
 
-                </tbody>
-            </table>
-        </nav>
+            </tbody>
+        </table>
+    </nav>
 
 
-    </main>
+</main>
 <hr/>
 
-    <footer></footer>
+<footer th:replace="~{footer::#footer}"></footer>
+
 </body>
 </html>
