#18 - 게시판 페이지에 decoupled logic 적용
타임리프 문법을 HTML 마크업 페이지에서 분리해서 th.xml 파일로 옮김

--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -1,10 +1,15 @@
+<!--타임리프의 decoupled 로직 적용해보기.
+    여기 파일을 다 HTML 로만 구성
+    th:replace 들을 다 삭제-->
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <!--xmlns:th="http://www.thymeleaf.org"
     이걸 넣으면 이 문서는 타임리프 템플릿이라고 알려준다.
     그런데 회색처리 되어있다. 2버전에서는 필수 였는데 3에서부터는 생략해도 된다.
     공식문서에는 아직 있어서 작성해둠.
     -->
+
+
 <head>
     <meta charset="UTF-8">
     <title>게시판 페이지</title>
@@ -16,7 +21,7 @@
 
 <!--헤더를 컴포넌트로 변경-->
 <!--th:replacce="~{파일명 :: 셀렉터}" -->
-<header th:replace="~{header::#header}"></header>
+<header id="header"></header>
 
 <main>
     <form action="#">
@@ -65,7 +70,7 @@
 </main>
 <hr/>
 
-<footer th:replace="~{footer::#footer}"></footer>
+<footer id="footer"></footer>
 
 </body>
 </html>
