--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -37,7 +37,10 @@
 </svg>
 
 
-<header id="header"></header>
+<header id="header">
+    header 삽입부
+    <hr>
+</header>
 
 <main  class="container">
     <!-- 검색 -->
@@ -75,34 +78,22 @@
         </div>
     </div>
 
-    <table class="table">
+    <table class="table" id="article-table">
         <thead>
-        <tr>
-            <th>제목</th>
-            <th>해시태그</th>
-            <th>작성자</th>
-            <th>작성일</th>
-        </tr>
+            <tr>
+                <th>제목</th>
+                <th>해시태그</th>
+                <th>작성자</th>
+                <th>작성일</th>
+            </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>1번글</td>
-            <td>#java</td>
-            <td>bitstudy</td>
-            <td>2023-01-04</td>
-        </tr>
-        <tr>
-            <td>2번글</td>
-            <td>#spring</td>
-            <td>bitstudy</td>
-            <td>2023-01-03</td>
-        </tr>
-        <tr>
-            <td>3번글</td>
-            <td>#mysql</td>
-            <td>bitstudy</td>
-            <td>2023-01-01</td>
-        </tr>
+            <tr>
+                <td class="title"><a>1번글</a></td>
+                <td class="hashtag"><a>#java</a></td>
+                <td class="user-id"><a>bitstudy</a></td>
+                <td class="created-date"><a>2023-01-04</a></td>
+            </tr>
         </tbody>
     </table>
 
@@ -130,7 +121,10 @@
 
 </main>
 
-<footer id="footer"></footer>
+<footer id="footer">
+    <hr>
+    footer 삽입부
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
