#22 - 게시글 상세페이지 구현

--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -40,7 +40,7 @@
 <header id="header"></header>
 
 <main id="article-main" class="container">
-    <header class="py-5 text-center">
+    <header id="article-header" class="py-5 text-center">
         <h2>1번글</h2>
     </header>
 
@@ -64,7 +64,7 @@
                 </li>
                 <li class="list-group-item d-flex justify-content-between lh-sm">
                     <div>
-                        <h6 class="my-0"><time id="created-at">2023-01-06</time></h6>
+                        <h6 class="my-0"><time id="created-date">2023-01-06</time></h6>
                     </div>
                 </li>
                 <li class="list-group-item d-flex justify-content-between bg-light">
@@ -97,18 +97,11 @@
                 </div>
             </form>
 
-            <ul>
+            <ul id="comment-ul">
                 <li>
-                    <strong>kh정보교육원</strong>
-                    <time>2023-01-06</time>
-                    <p>댓글인데 뭐라고 해야될지 모르겠다. 어제 한 dto 너무 어렵다. <br>
-                        집에 가고싶다.</p>
-                </li>
-
-                <li>
-                    <strong>goodjob0412</strong>
-                    <time>2023-01-06</time>
-                    <p>댓글인데 뭐라고 해야될지 모르겠다. 어제 한 dto 너무 어렵다. <br>
+                    <strong id="comment-nickname">kh정보교육원</strong>
+                    <time id="comment-createdDate">2023-01-06</time>
+                    <p id="comment-content">댓글인데 뭐라고 해야될지 모르겠다. 어제 한 dto 너무 어렵다. <br>
                         집에 가고싶다.</p>
                 </li>
 
