--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -92,24 +92,30 @@
                 <td class="title"><a>1번글</a></td>
                 <td class="hashtag"><a>#java</a></td>
                 <td class="user-id"><a>bitstudy</a></td>
-                <td class="created-date"><a>2023-01-04</a></td>
+                <td class="created-date"><time>2023-01-04</time></td>
+            </tr>
+            <tr>
+                <td class="title"><a>2번글</a></td>
+                <td class="hashtag"><a>#java2</a></td>
+                <td class="user-id"><a>bitstudy2</a></td>
+                <td class="created-date"><time>2023-01-04</time></td>
             </tr>
         </tbody>
     </table>
 
     <!-- 페이지네이션 -->
-    <nav class="d-flex justify-content-center">
+    <nav class="d-flex justify-content-center" id="pagination">
         <ul class="pagination pagination-base pagination-boxed pagination-square mb-0">
             <li class="page-item">
                 <a class="page-link no-border" href="#">
                     <span aria-hidden="true">«</span>
-                    <span class="sr-only">Previous</span>
+                    <span class="sr-only">Prev</span>
                 </a>
             </li>
+
             <li class="page-item active"><a class="page-link no-border" href="#">1</a></li>
-            <li class="page-item"><a class="page-link no-border" href="#">2</a></li>
-            <li class="page-item"><a class="page-link no-border" href="#">3</a></li>
-            <li class="page-item"><a class="page-link no-border" href="#">4</a></li>
+
+
             <li class="page-item">
                 <a class="page-link no-border" href="#">
                     <span aria-hidden="true">»</span>
